# Simple-OS

./: CMakeLists.txt  os
include/: queue.h  sched.h
input/: description
src/: queue.c  sched.c
